# pmp-library

./: .appveyor.yml  .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGES  CITATION.cff  CMakeLists.txt  CNAME  DISCLAIMER.txt  FUNDING.yml  INSTALL  LICENSE.txt  README  README.md  SECURITY.md  advanced.html  advanced.js  algorithms-guide.html  algorithms-guide.js  annotated.html  annotated.js  appveyor.yml  archive.html  citelist.html  classpmp_1_1_allocation_exception-members.html  classpmp_1_1_allocation_exception.html  classpmp_1_1_bounding_box-members.html  classpmp_1_1_bounding_box.html  classpmp_1_1_bounding_box.js  classpmp_1_1_drawable-members.html  classpmp_1_1_drawable.html  classpmp_1_1_edge-members.html  classpmp_1_1_edge.html  classpmp_1_1_edge_property-members.html  classpmp_1_1_edge_property.html  classpmp_1_1_edge_property.js  (+230 more)
benchmarks/: CMakeLists.txt  PerformanceTest.h  SurfaceMeshPerformance.h  performance.cpp
doc/: CMakeLists.txt  Doxyfile.in  development.dox  development.md  footer.html  installation.dox  installation.md  layout.xml  mainpage.dox  mainpage.md  overview.md  quickstart.md  style.css  usage.dox
docs/: CMakeLists.txt  Doxyfile.in  advanced.md  algorithms.md  bibliography.bib  code_of_conduct.md  codingstyle.md  contributing.md  custom.css  decimation.md  developers.md  doxygen-awesome.css  eigen.md  emscripten.md  footer.html  guide.md  header.html  hole_filling.md  installation.md  issue_template.md  layout.xml  mainpage.md  mpview.data  mpview.html  mpview.html.mem  mpview.js  mpview.wasm  news.md  overview.md  pull_request_template.md  quickstart.md  remeshing.md  smoothing.md  style.css  subdivision.md  tutorial.md  userguide.md
docs/images/: favicon.pnm  pmp-logo-with-strokes.afdesign  pmp-logo.afdesign
docs/jekyll/: .gitignore  _config.yml  archive.html  index.html
docs/jekyll/_drafts/: 2019-02-17-version-one.md
docs/jekyll/_includes/: footer.html  header.html  navbar.html
docs/jekyll/_layouts/: default.html  page.html  post.html
docs/jekyll/_posts/: 2019-02-16-license-changed.md  2019-02-18-version-one-released.md  2019-05-30-version-1.1-released.md  2019-06-02-showcase-interactive-html-slides.md  2020-03-15-version-1.2-released.md  2020-05-10-version-1.2.1-released.md
docs/jekyll/css/: style.scss
docs/posts/: 2019-02-16-license-changed.md  2019-02-18-version-one-released.md  2019-05-30-version-1.1-released.md  2019-06-02-interactive-html-slides.md  2020-03-15-version-1.2-released.md  2020-05-10-version-1.2.1-released.md  2020-07-06-pmp-at-sgp.md  2022-08-14-version-2.0-released.md  2022-08-26-version-2.0.1-released.md  2023-08-24-version-3.0-released.md  version-3-released.md
examples/: CMakeLists.txt  MeshProcessingViewer.cpp  MeshProcessingViewer.h  SurfaceMeshBarycenter.cpp  SurfaceMeshBasics.cpp  SurfaceMeshIO.cpp  SurfaceMeshIterators.cpp  barycenter.cpp  basics.cpp  curvature.cpp  decimation.cpp  eigen.cpp  fairing.cpp  hole_filling.cpp  io.cpp  iterators.cpp  mconvert.cpp  mesh_processing_viewer.cpp  mesh_processing_viewer.h  mpview.cpp  mview.cpp  parameterization.cpp  properties.cpp  remeshing.cpp  smoothing.cpp  subdiv.cpp  subdivision.cpp  surface_mesh_barycenter.cpp  surface_mesh_basics.cpp  surface_mesh_io.cpp  surface_mesh_iterators.cpp
examples/data/: shell.html
src/apps/: CMakeLists.txt  EdgeSetProcessingViewer.cpp  EdgeSetProcessingViewer.h  MeshProcessingViewer.cpp  MeshProcessingViewer.h  PointSetProcessingViewer.cpp  PointSetProcessingViewer.h  curview.cpp  decimation.cpp  deftrans.cpp  eview.cpp  fairing.cpp  mconvert.cpp  mpview.cpp  mview.cpp  parameterization.cpp  pview.cpp  remeshing.cpp  smoothing.cpp  subdiv.cpp
src/apps/data/: shell.html
src/pmp/: BoundingBox.h  CMakeLists.txt  EdgeSet.cpp  EdgeSet.h  Exceptions.h  GeometryObject.h  MatVec.h  Matrix.h  MemoryUsage.cpp  MemoryUsage.h  PointSet.cpp  PointSet.h  Properties.h  SurfaceMesh.cpp  SurfaceMesh.h  SurfaceMeshIO.cpp  SurfaceMeshIO.h  Timer.h  Types.h  Vector.h  Version.cpp  Version.h  bounding_box.h  exceptions.h  mat_vec.h  memory_usage.h  properties.h  stop_watch.h  surface_mesh.cpp  surface_mesh.h  types.h  utilities.cpp  utilities.h
src/pmp/algorithms/: BarycentricCoordinates.h  CMakeLists.txt  Curvature.cpp  Curvature.h  Decimation.cpp  Decimation.h  DeformationTransfer.cpp  DeformationTransfer.h  DifferentialGeometry.cpp  DifferentialGeometry.h  DistancePointTriangle.cpp  DistancePointTriangle.h  EdgeSetSmoothing.cpp  EdgeSetSmoothing.h  EdgeSetSubdivision.cpp  EdgeSetSubdivision.h  FaceOrientationReverse.cpp  FaceOrientationReverse.h  Fairing.cpp  Fairing.h  Features.cpp  Heap.h  (+103 more)
src/polygonal/: CMakeLists.txt  README.md  aabb_tree.h  lasso_drawable.cpp  lasso_drawable.h  lasso_shader.h  main.cpp  polygonal.cpp  polygonal.h  shell.html
src/surface_mesh/: BoundingBox.h  CMakeLists.txt  EdgeSet.cpp  EdgeSet.h  GeometryObject.h  IO.cpp  IO.h  IO_obj.cpp  IO_off.cpp  IO_poly.cpp  IO_stl.cpp  IO_xyz.cpp  IO_xyz.h  Matrix.h  MemoryUsage.h  PointSet.cpp  PointSet.h  SurfaceMesh.cpp  SurfaceMesh.h  Surface_mesh.cpp  Surface_mesh.h  Timer.h  Vector.h  properties.h  types.h
tests/: CMakeLists.txt  CurvatureTest.cpp  DecimationTest.cpp  DifferentialGeometryTest.cpp  DistancePointTriangleTest.cpp  EdgeSetAlgorithmsTest.cpp  EdgeSetSmoothingTest.cpp  EdgeSetSubdivisionTest.cpp  EdgeSetTest.cpp  EigenTest.cpp  FaceOrientationReverseTest.cpp  FairingTest.cpp  FeaturesTest.cpp  GeodesicsTest.cpp  GeometryObjectTest.cpp  Helpers.cpp  Helpers.h  HelpersTest.cpp  HoleFillingTest.cpp  IOTest.cpp  IteratorTest.cpp  MatVecTest.cpp  NormalsTest.cpp  ParameterizationTest.cpp  PointKdTreeTest.cpp  PointSetAlgorithmsTest.cpp  PointSetIOTest.cpp  PointSetSmoothingTest.cpp  PointSetTest.cpp  PointSetTest.h  RemeshingTest.cpp  ShapesTest.cpp  SimplificationTest.cpp  SmoothingTest.cpp  SubdivisionTest.cpp  SurfaceCurvatureTest.cpp  SurfaceFactoryTest.cpp  SurfaceFairingTest.cpp  SurfaceFeaturesTest.cpp  SurfaceGeodesicTest.cpp  (+45 more)
tests/data/: 3rings.knt  edge_onering.off  icosahedron_binary.stl
(+429 files in other folders)
